Added documentation for Java 17
For dealing with illegal access error.